# TagBot

./: .dockerignore  .env.example  .eslintrc  .gitignore  .jshintignore  .jshintrc  CONTRIBUTING.md  Cargo.toml  Commands.js  Config.json  Cooldowns.json  Dockerfile  Makefile  README.md  Tags.js  docker-compose.yml  main.js  misc.txt  package-lock.json  package.json  rustfmt.toml  template.js
.github/ISSUE_TEMPLATE/: bug-report-template.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
Old/: Commands.js  Config.json  README.md  Tags.js  main.js  package.json  template.js
attribs/: Cargo.toml
attribs/src/: attributes.rs  lib.rs  structures.rs  util.rs
bot/: Config.json  main.js
bot/commands/Tags/: add.js  commands.js  delete.js  edit.js  eval.js  glist.js  help.js  list.js  raw.js  search.js  stealtag.js  tagowner.js
bot/extends/: extends.js
bot/handlers/: index.js  messageCreate.js
bot/tags/: handler.js
bot/utils/: SendError.js
bot/utils/tags/: index.js  tags.js
bot/utils/user/: index.js  user.js
config/: default.example.json
data/lua/: util.lua
docs/lua/: README.md  TBChannel.md  TBChannelCategory.md  TBChannelId.md  TBChannelType.md  TBColour.md  TBDefaultMessageNotificationLevel.md  TBEmbed.md  TBEmoji.md  TBEmojiId.md  TBGuildChannel.md  TBGuildId.md  TBGuildWelcomeChannel.md  TBGuildWelcomeChannelEmoji.md  TBIntegrationId.md  TBMember.md  TBMessageId.md  TBMfaLevel.md  TBNsfwLevel.md  TBPartialGuild.md  TBPremiumTier.md  TBPrivateChannel.md  TBRole.md  TBRoleId.md  TBRoleTags.md  TBSticker.md  TBStickerFormatType.md  TBStickerId.md  TBStickerPackId.md  TBStickerType.md  TBThreadMember.md  TBThreadMetadata.md  TBTimestamp.md  TBUser.md  TBUserId.md  TBVerificationLevel.md  TBVideoQualityMode.md  TBWelcomeScreen.md
src/: Client.js  Config.json  TagBot.js  UnknownTagError.js  index.js  lib.rs  main.rs
src/Classes/Tags/: Tags.js
src/Classes/User/: User.js
src/Commands/: Handler.js
src/Handlers/: messageCreate.js
src/Handlers/Tags/: Tags.js
src/TagEngine/: index.js  lexer.js
src/TagEngine/Tags/: choose.js  (+1 more)
src/Util/: BlockDisplay.js  Cache.js  Extenders.js
src/commands/: mod.rs  ping2.rs
src/services/: mod.rs  rethinkdb.rs
src/tags/: mod.rs
src/util/: command_options.rs  error.rs  input_field.rs  log.rs  message.rs  mod.rs  paths.rs
tagbot-macro/: Cargo.toml
tagbot-macro/src/: functions.rs  index_input.rs  lib.rs
tagbot-macros/: Cargo.toml  README.md
tagbot-macros/src/: lib.rs
tagbot-macros/src/luadoc/: README.md  comments.rs  convert_parser.rs  document.rs  markdown.rs  mod.rs  requireable.rs
tests/: README.md  mod.rs  test.rs
tests/tags/: mod.rs
tests/util/: creator_types.rs  creators.rs  mod.rs
(+112 files in other folders)
