[package]
name = "tagbot"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reql = "0.11.1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = "0.2.0"
lazy_static = "1.4.0"
futures = "0.3.23"
serde = "1.0.144"
rlua = "0.19.4"

[dependencies.serenity]
default-features = false
version = "0.11.5"
features = [ "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend" ]
