[package]
name = "tagbot"
version = "4.0.2"
edition = "2021"
license = "OPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reql = "0.11.1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = "0.2.0"
lazy_static = "1.4.0"
futures = "0.3.24"
serde = "1.0.144"
rlua = "0.19.4"
regex = "1"
chrono = "0.4.22"
rand = "0.8.5"
gag = "1.0.0"
tagbot-macros = { path = "tagbot-macros" }
bitflags = "1.3.2"
cat-loggr = { version = "1.0.2", features = ["macros"] }


[dependencies.serenity]
default-features = false
version = "0.11.5"
features = [ "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend" ]

[dev-dependencies]
test-case = "2.2.1"
serde_json = "1.0.1"