[package]
name = "tagbot_attribs"
version = "4.0.0"
edition = "2021"
descriotion = "Attribs for tagbot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0.43"

[dependencies.syn]
version = "1.0.99"
features = [ "full", "derive", "extra-traits" ]
